prevent space breaks on th and money column

--- a/assets/stylesheets/haltr.css
+++ b/assets/stylesheets/haltr.css
@@ -182,3 +182,6 @@ span.ownCertificate {
 span.ownCertificate a {
   font-weight: bold;
 }
+.taula-1 th, .money {
+    white-space: nowrap;
+}
